# microciv

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  project.md  pyproject.toml
data/: .gitkeep
docs/: history.md  instruction.md  issues讨论结论.md  microciv.md  review问题与修改计划.md  tui-history.md  tui-project.md  tui.md  阶段一项目规则与操作流程.md  项目规则与操作流程.md
exports/: .gitkeep
issues/: issues.txt
scripts/: analyze_batch.py  batch_autoplay.py  generate_dataset.py  requirements.txt
src/microciv/: __init__.py  __main__.py  app.py  config.py  constants.py  curses_app.py  session.py
src/microciv/ai/: __init__.py  baseline.py  custom.py  greedy.py  heuristics.py  policy.py  random_policy.py
src/microciv/game/: actions.py  engine.py  enums.py  mapgen.py  models.py  networks.py  resources.py  scoring.py
src/microciv/records/: __init__.py  export.py  models.py  store.py
src/microciv/tui/: __init__.py  app.py  pixel_font.py
src/microciv/tui/presenters/: __init__.py  game_session.py  state_machine.py  status.py
src/microciv/tui/renderers/: __init__.py  assets.py  digits.py  dotmatrix_logo.py  hexes.py  logo.py  map.py  matrix_logo.py  scaling.py
src/microciv/tui/screens/: __init__.py  final.py  game.py  game_menu.py  menu.py  records.py  setup.py
src/microciv/tui/widgets/: __init__.py  action_panel.py  hexes.py  image_surface.py  logo.py  map_grid.py  map_preview.py  map_view.py  metric_panel.py  panel_button.py  record_cards.py  text_image.py
src/microciv/utils/: __init__.py  grid.py  hexgrid.py  rng.py
tests/: test_ai.py  test_analyze_batch.py  test_batch_autoplay.py  test_curses_app.py  test_engine.py  test_generate_dataset.py  test_grid.py  test_hexgrid.py  test_logo.py  test_mapgen.py  test_models.py  test_networks.py  test_raster_renderers.py  test_records.py  test_resources.py  test_scoring.py  test_smoke.py  test_tui.py
