[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "2026-spring-microciv"
version = "0.1.0"
description = "A Textual-based micro strategy civilization simulator for the 2026 spring course project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0.0",
    "rich>=14.0.0",
    "textual>=8.2.3",
    "textual-image>=0.8.3",
]

[project.scripts]
microciv = "microciv.app:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "textual-dev>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microciv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
mypy_path = "src"
packages = ["microciv"]
python_version = "3.13"
warn_unused_configs = true
