[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "microciv"
version = "0.1.0"
description = "A curses-based micro strategy civilization simulator for the 2026 spring course project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
]

[project.scripts]
microciv = "microciv.app:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "tabulate>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microciv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
mypy_path = "src"
packages = ["microciv"]
python_version = "3.13"
warn_unused_configs = true
